src/objects/ffct__BundleJobItem__c.object
<CustomObject>
    <customHelpPage>ffct__bundlejobonlinehelp</customHelpPage>
    <description>Details of the bundle items processed in a bundle job.</description>
    <fields>
        <fullName>ffct__BundleJob__c</fullName>
        <label>Bundle Job</label>
        <referenceTo>ffct__BundleJob__c</referenceTo>
        <relationshipName>BundleJobItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__BundleProvisionState__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Provision State</label>
        <referenceTo>ffct__Bundle_Provision_State__c</referenceTo>
        <relationshipName>BundleJobItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__BundleSource__c</fullName>
        <label>Bundle Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Bundle__c</fullName>
        <label>Bundle</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__SkipInstalledPackageComponents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Installed Package Components</label>
        <type>Checkbox</type>
    </fields>
    <label>Bundle Job Item</label>
    <nameField>
        <label>Bundle Job Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Job Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>